@@ -13,15 +13,15 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ContextConfiguration;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 
 @ContextConfiguration(classes = AclApplication.class)
 @SpringBootTest
-public class UserRespositoryShould {
+public class UserRepositoryShould {
 
     @Autowired
     private UserRepository repository;
@@ -40,7 +40,7 @@ public class UserRespositoryShould {
         repository.save(user);
         Criteria criteria = new Criteria(
                 new Filters(
-                        Arrays.asList(
+                        List.of(
                                 Filter.create("userName",
                                         "contains",
                                         user.userName().value()))),
@@ -52,6 +52,6 @@ public class UserRespositoryShould {
     public void search_by_test() {
         User user = UserMother.random();
         repository.save(user);
-        assertThat("obtnemos un usuario", repository.findByName(user.userName().value()).isPresent());
+        assertThat("get a user", repository.findByName(user.userName().value()).isPresent());
     }
 }
